--- a/contact.html
+++ b/contact.html
@@ -169,8 +169,8 @@
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5"
              style="border-color: rgba(256, 256, 256, .1) !important;">
             <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Conexis</a>. Todos os direitos
-                reservados.</a></p>
-            <p class="m-0 text-white">Desenvolvido por <a class="font-weight-bold" href="#">Iann Oliveira</a></a></p>
+                reservados.</p>
+            <p class="m-0 text-white">Desenvolvido por <a class="font-weight-bold" href="#">Iann Oliveira</a></p>
         </div>
     </div>
     <!-- Footer End -->
