--- a/index.html
+++ b/index.html
@@ -67,21 +67,18 @@
     <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                <img class="w-100" src="img/carousel-1.jpeg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <h1 class="display-2 text-primary font-weight-medium m-0">CONEXIS</h1>
-                    <h2 class="h2-custom text-custom m-0">Uma nova forma de impulsionar negócios</h2>
-                    <h2 class="h2-custom text-custom m-0">Marketing e Finanças em uma sinergia capaz de fazer o
-                        extraordinário</h2>
+                    <h2 class="h2-custom text-custom m-0">Uma nova forma de impulsionar empresas!</h2>
+                    <h2 class="h2-custom text-custom m-0">Integração entre Marketing e Finanças para um crescimento sustentável.</h2>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <h1 class="display-2 text-primary font-weight-medium m-0">CONEXIS</h1>
-                    <h2 class="h2-custom text-custom m-0">Uma nova forma de impulsionar negócios</h2>
-                    <h2 class="h2-custom text-custom m-0">Marketing e Finanças em uma sinergia capaz de fazer o
-                        extraordinário</h2>
+                    <h2 class="h2-custom text-custom m-0">Pegamos desafios e transformamos em oportunidades!</h2>
                 </div>
             </div>
         </div>
@@ -652,8 +649,8 @@
             <h4 class="h1-custom text-uppercase mb-4" style="letter-spacing: 3px;">Siga-nos</h4>
             <p class="p-custom-amarelo">Junte-se a nós nas redes sociais</p>
             <div class="justify-content-start" style="text-align: center;">
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-whatsapp"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square" href="instagram.com/conexis_business" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://wa.me/5591986049828?text=Olá, vim através do site e gostaria de saber mais sobre os serviços integrados de marketing e finanças."><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://instagram.com/conexis_business" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 mb-5">
@@ -670,14 +667,14 @@
     <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5"
          style="border-color: rgba(256, 256, 256, .1) !important;">
         <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Conexis</a>. Todos os direitos
-            reservados.</a></p>
-        <p class="m-0 text-white">Desenvolvido por <a class="font-weight-bold" href="#">Iann Oliveira</a></a></p>
+            reservados.</p>
+        <p class="m-0 text-white">Desenvolvido por <a class="font-weight-bold" href="#">Iann Oliveira</a></p>
     </div>
 </div>
 <!-- Footer End -->
 
 
-<a href="https://wa.me/5591986049828"
+<a href="https://wa.me/5591986049828?text=Olá, vim através do site e gostaria de saber mais sobre os serviços integrados de marketing e finanças."
    class="whatsapp-btn  back-to-top-zap"
    target="_blank">
     <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" style="width: 45px; filter: invert(45%) sepia(98%) saturate(537%) hue-rotate(88deg) brightness(92%) contrast(91%);">
